@@ -4,9 +4,13 @@ Released 2.3.1 2007-07-xx
 Changes since 2.3.0:
 
 * Support for setuptools (building .egg, thanks to Torsten)
+* Support for matched values control (RFC 3876, thanks to Andreas)
 
 Lib/
 * Fixed ldif (see SF#1709111, thanks to Dmitry)
+* ldap.schema.models:
+  SUP now separated by $ (method __str__() of classes
+  AttributeType, ObjectClass and DITStructureRule, thanks to Stefan)
 
 Modules/
 * Added constant MOD_INCREMENT to support
